--- a/client/src/app.css
+++ b/client/src/app.css
@@ -7,8 +7,14 @@
     color: white;
     font-size: 16px !important;
     font-weight: 500 !important;
-    background: #e14eca !important;
+    background: #3578E5 !important;
 }
 .placeColorBlack{
     color:black !important;
+}
+
+.register-page .squares, .register-page .square, .section.section-signup .squares, .section.section-signup .square {
+    background: #1D3C78 !important;
+    background: -webkit-gradient(linear, left bottom, left top, from(#1D3C78), to(#3578E5)) !important;
+    background: linear-gradient(0deg, #1D3C78, #3578E5 100%) !important;
 }
